Bug 443536 - "Can be above fullscreen windows" can not be disabled
Summary: "Can be above fullscreen windows" can not be disabled
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-10 06:40 UTC by crc
Modified: 2021-10-22 18:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
latte-dock panel appears before ksmserver-logout-greeter window (526.25 KB, image/png)
2021-10-10 06:40 UTC, crc
Details
latte-dock panel appears before Parachute window (865.11 KB, image/png)
2021-10-10 06:41 UTC, crc
Details
The option 'Can be above fullscreen windows' is already disabled but the bug remains (440.01 KB, image/png)
2021-10-17 07:51 UTC, crc
Details
latte layout file (15.25 KB, text/plain)
2021-10-19 20:55 UTC, crc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description crc 2021-10-10 06:40:35 UTC
Created attachment 142291 [details]
latte-dock panel appears before ksmserver-logout-greeter window

SUMMARY
The dock panel of Latte-dock wrongly appears before certain full-screen windows in KDE Plasma, including the full-screen ksmserver-logout-greeter window and the virtual desktop interface of KWinScript Parachute, even though the "appear before full-screen window" option is disabled in latte-dock configuration. The problem seemingly occured right after plasma5.22 update.

STEPS TO REPRODUCE
1. Check and confirm the "appear before full-screen window" option is disabled in latte-dock panel configuration.
2. Activate ksmserver-logout-greeter or Parachute.

OBSERVED RESULT
The dock panel of Latte-dock wrongly appears before the above two full-screen windows

EXPECTED RESULT
The dock panel should hide behind full-screen windows.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Manjaro Linux Pahvo 21.1.5
(available in About System)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 crc 2021-10-10 06:41:47 UTC
Created attachment 142292 [details]
latte-dock panel appears before Parachute window
Comment 2 Michail Vourlakos 2021-10-16 20:41:02 UTC
Disable from Behavior (advanced settings) - Can be above fullscreen windows
Comment 3 crc 2021-10-17 07:49:28 UTC
(In reply to Michail Vourlakos from comment #2)
> Disable from Behavior (advanced settings) - Can be above fullscreen windows

Sorry I didn't give a clear description about the problem. I'm using the Chinese translated version and don't know the orginal English name of the option is 'Can be above fullscreen windows', so I wrongly discribed it as 'appear before full-screen window'. Anyway, the option 'Can be above fullscreen windows' is already disabled, but problem remains, latte-dock panel still appears before ksmserver-logout-greeter and Parachute. The bug occurs ONLY in these two fullscreen windows.
Comment 4 crc 2021-10-17 07:51:36 UTC
Created attachment 142523 [details]
The option 'Can be above fullscreen windows' is already disabled but the bug remains
Comment 5 Michail Vourlakos 2021-10-17 08:04:29 UTC
send me your layout file to test it in my system
Comment 6 Michail Vourlakos 2021-10-17 08:05:38 UTC
2. Dont you have the exact same issue with plasma panels?
Comment 7 Michail Vourlakos 2021-10-19 17:13:04 UTC
waiting response
Comment 8 crc 2021-10-19 20:55:43 UTC
Created attachment 142639 [details]
latte layout file

Sorry, I thought I'v sent my latte layout file to your personal email but maybe you didn't receive it, so I post the file here again. My latte-dock has a top-panel, a sidebar and a dock at the bottom. The bug only belongs to the bottom dock. The top-panel never show above any fullscreen windows, and my former plasma panel (disabled after using latte top-panel)  also behaved quite normally.
Comment 9 Michail Vourlakos 2021-10-22 17:31:23 UTC
testing your layout I can reproduce...
Comment 10 Michail Vourlakos 2021-10-22 18:34:03 UTC
Git commit 008a9c6038cee8d66a2efc86669b42b1721be336 by Michail Vourlakos.
Committed on 22/10/2021 at 18:31.
Pushed by mvourlakos into branch 'v0.10'.

disable "CanBeAboveFullscreen" properly

--fix how CanBeAboveFullscreen windows option can be
enabled/disabled properly and work correctly
--fix how Blur is handled for docks and panels that
can be AboveFullScreenWindows under X11. Blur is now
working correctly for them but of course GtkFrameExtents
do not work at all because they are intended to work
based on KWin implementation.

M  +1    -1    app/view/effects.cpp
M  +7    -5    app/view/view.cpp
M  +1    -1    app/view/view.h
M  +7    -2    app/view/visibilitymanager.cpp
M  +1    -1    shell/package/contents/configuration/pages/BehaviorConfig.qml

https://invent.kde.org/plasma/latte-dock/commit/008a9c6038cee8d66a2efc86669b42b1721be336
Comment 11 Michail Vourlakos 2021-10-22 18:34:30 UTC
Git commit e8220626689514f54976749ef6d35fdbc333410c by Michail Vourlakos.
Committed on 22/10/2021 at 18:34.
Pushed by mvourlakos into branch 'master'.

disable "CanBeAboveFullscreen" properly

--fix how CanBeAboveFullscreen windows option can be
enabled/disabled properly and work correctly
--fix how Blur is handled for docks and panels that
can be AboveFullScreenWindows under X11. Blur is now
working correctly for them but of course GtkFrameExtents
do not work at all because they are intended to work
based on KWin implementation.

M  +1    -1    app/view/effects.cpp
M  +7    -5    app/view/view.cpp
M  +1    -1    app/view/view.h
M  +7    -2    app/view/visibilitymanager.cpp
M  +1    -1    shell/package/contents/configuration/pages/BehaviorConfig.qml

https://invent.kde.org/plasma/latte-dock/commit/e8220626689514f54976749ef6d35fdbc333410c